--- a/resources/views/includes/header.twig
+++ b/resources/views/includes/header.twig
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Title of the document</title>
+    <title>TODO App</title>
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
