--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -1,5 +1,20 @@
+body {
+    font-family: 'Indie Flower', cursive;
+}
+
 #app {
-    width: 500px;
-    height: 500px;
-    background-color: red;
+    margin: 0 auto;
+    width: 80%;
+    border: 1px solid grey;
+    padding: 20px;
+    box-shadow: 5px 5px rgba(0, 0, 0, 0.5);
+
+    .main {
+        text-align: center;
+
+        input {
+            width: 50%;
+            height: 25px;
+        }
+    }
 }
