--- a/resources/views/includes/header.twig
+++ b/resources/views/includes/header.twig
@@ -4,5 +4,6 @@
     <meta charset="UTF-8">
     <title>TODO App</title>
     <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 </head>
 <body>
